# jromp-examples

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  pom.xml  times.md
src/main/c/jromp/examples/: atomic.c  basic_usage_1.c  basic_usage_2.c  critical.c  if.c  masked.c  matrix_multiplication.c  num_threads.c  parallel_for_base.c  pi_calculation_with_reduction.c  private_variable.c  sections.c  shared_variable.c  single.c  single_nowait.c
src/main/c/jromp/examples/error_prone/: critical_with_atomic.c
src/main/c/jromp/examples/mandelbrot/: mandelbrot.h  mandelbrot_original.c  mandelbrot_parallel.c
src/main/c/jromp/examples/variables/: all_reduction.c  first_private_variable.c  last_private_variable.c  shared_variable.c
src/main/java/jromp/examples/: AtomicExample.java  BasicUsage1.java  BasicUsage2.java  CriticalExample.java  MatrixMultiplicationParallel.java  MatrixMultiplicationSequential.java  MatrixMultiplicationWithParallelization.java  MatrixMultiplicationWithoutParallelization.java  NumThreadsExample.java  ParallelForBase.java  PiCalculationWithReduction.java  PrivateVariableExample.java  Sections.java  SingleExample.java  SingleNowaitExample.java
src/main/java/jromp/examples/mandelbrot/: Mandelbrot.java  MandelbrotOriginal.java  MandelbrotParallel.java
src/main/java/jromp/examples/presentation/: JROMPUsage.java
src/main/java/jromp/examples/variables/: AllReductionExample.java  FirstPrivateVariableExample.java  LastPrivateVariableExample.java  PrivateVariableExample.java  SharedVariableExample.java
src/main/resources/: logback.xml
